# AdventOfCode

2017/: day1.cpp  day10.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day7.sh  day8.cpp  day9.cpp
2018/: day1.cpp  day10.cpp  day10.input.clean  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day16.cpp  day1p2.cpp  day2.cpp  day2p2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day6.input.clean  day7.cpp  day8.cpp  day9.cpp
2021/: CMakeLists.txt  day1.cpp  day1p2.cpp  day2.cpp  day3.cpp
2023/: CMakeLists.txt  day1.cpp
2023/day1/: day1p2.cpp
2023/day10/: day10.cpp
2023/day11/: day11.cpp
2023/day12/: day12.cpp
2023/day13/: day13.cpp
2023/day14/: day14.cpp
2023/day15/: day15.cpp
2023/day16/: day16.cpp
2023/day2/: day2.cpp
2023/day3/: day3.cpp
2023/day4/: day4.cpp
2023/day5/: day5.cpp
2023/day6/: day6.cpp
2023/day7/: day7.cpp
2023/day8/: day8.cpp
2023/day9/: day9.cpp
